W-15402245: Remove directed exports from `mule-artifact-ast` (#13400)